mehari/src/annotate/seqvars/snapshots/mehari__annotate__seqvars__csq__test__annotate_snv_ttn_transcript_picking_reporting@2-179631246-G-A-false-false.snap
---
source: mehari/src/annotate/seqvars/csq.rs
expression: res
snapshot_kind: text
---
- allele:
    Alt:
      alternative: A
  consequences:
    - stop_gained
  putative_impact: high
  gene_symbol: TTN
  gene_id: "HGNC:12403"
  feature_type:
    so_term:
      term: Transcript
  feature_id: NM_001267550.2
  feature_biotype:
    - coding
  feature_tags:
    - ref_seq_select
    - mane_select_backport
  rank:
    ord: 41
    total: 363
  hgvs_g: g.179631246G>A
  hgvs_n: n.9790C>T
  hgvs_c: c.9565C>T
  hgvs_p: p.Gln3189Ter
  cdna_pos:
    ord: 9790
    total: 109224
  cds_pos:
    ord: 9565
    total: 107976
  protein_pos:
    ord: 3189
    total: 35992
  distance: 0
  strand: -1
  messages: ~
